--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
          transform: scale(1.05);
       }
 
-      /* OVERLAY VIDEO */
+      /* Overlay del video */
       #overlay {
          display: none;
          position: fixed;
@@ -152,6 +152,18 @@
          color: white;
          cursor: pointer;
          font-weight: bold;
+      }
+
+      /* Pie de firma */
+      .info-profa {
+         margin-top: 35px;
+         font-size: 18px;
+         font-weight: bold;
+         background: rgba(0, 0, 0, 0.3);
+         padding: 12px 20px;
+         border-radius: 10px;
+         color: white;
+         display: inline-block;
       }
    </style>
 </head>
@@ -228,7 +240,6 @@
                   <li><a href="informacion.html">Más Información</a></li>
                </ul>
             </li>
-
          </ul>
       </nav>
 
@@ -243,6 +254,11 @@
       <div class="extras">
          <a href="#" class="boton" onclick="mostrarVideo('vide44.mp4')">🎥 Ver Video</a>
          <a href="documento1.pdf" class="boton" download>📄 Descargar Documento</a>
+      </div>
+
+      <!-- Firma -->
+      <div class="info-profa">
+         Realizado por: Leandro Reayna García – Grupo 502
       </div>
 
    </center>
